--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ background: linear-gradient(180deg, rgba(255,255,255,1) 14%, rgba(142,198,211,1)
 position: relative;
 }
 .dist{
-    height: 70%;
+    height: auto;
     background-position: center center;
     display: flex;
     flex-direction: column;
@@ -98,7 +98,10 @@ position: relative;
     padding: 100px 50px 0px;
     z-index: 0;
 }
-input[type=number],input[type=text],#subject{
+.dist h1{
+  margin-top: 20%;
+}
+input[type=number],input[type=text],#subject, #email{
   color:black;
   border:black 2px solid;
   padding: 10px 20px;
@@ -141,4 +144,42 @@ fieldset {
 }
 .contact{
   padding:5% 8%;
+}
+#results{
+  width: 70%;
+  margin-top: 20px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.5em;
+}
+ol {
+   list-style-type: decimal;
+   padding-left: 1em;
+   text-align: start;
+
+}
+
+li {
+   margin: 0;
+}
+
+li span.first {
+   background: #3E6975;
+   color: white;
+   padding: 2px 5px;
+   margin-right: 3px;
+   -moz-border-radius: 5px;
+   -webkit-border-radius: 5px;
+   border-radius: 5px;
+   cursor:pointer;
+}
+
+li span.last {
+   background: #990F02;
+   color: white;
+   padding: 2px 5px;
+   margin-right: 3px;
+   -moz-border-radius: 5px;
+   -webkit-border-radius: 5px;
+   border-radius: 5px;
+   cursor:pointer;
 }
