--- a/style.css
+++ b/style.css
@@ -29,7 +29,6 @@ body {
   background-position: center center;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   text-align: center;
   padding: 0 50px;
@@ -48,7 +47,23 @@ p{
   margin-bottom: 20px;
 }
 .intro{
-  margin-left: 50%;
+  margin-left:50%;
+}
+.intro h1, .intro p{
+  animation-name: example;
+  animation-duration: 2s;
+  animation-delay: -1s;
+  animation-timing-function: linear;
+}
+@keyframes example {
+  0%{right:0px; opacity: 0.6;}
+  25%{right:3%; opacity: 0.8;}
+  50%{right:6%;}
+  100%{right:10%;}
+}
+.intro-2{
+  margin-left: 0;
+  margin-top:20%;
 }
  .button{
   font-size: 16px;
@@ -58,6 +73,7 @@ p{
   padding: 10px 20px;
   border-radius: 10px;
   margin-top: 20px;
+  cursor: pointer;
 
 }
 .button:hover{
@@ -68,7 +84,7 @@ p{
 .gradient{
 background-color: rgb(255,255,255);
 background: linear-gradient(180deg, rgba(255,255,255,1) 14%, rgba(142,198,211,1) 100%);
-height: 100vh;
+height: 130vh;
 position: relative;
 }
 .gradient-1{
@@ -99,7 +115,7 @@ position: relative;
     z-index: 0;
 }
 .dist h1{
-  margin-top: 20%;
+  margin-top: 15%;
 }
 input[type=number],input[type=text],#subject, #email{
   color:black;
@@ -182,4 +198,13 @@ li span.last {
    -webkit-border-radius: 5px;
    border-radius: 5px;
    cursor:pointer;
+}
+
+#btn-reg{
+  display: none;
+}
+
+
+@media screen and (max-width:600px){
+
 }
